--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,11 +1,13 @@
 <!-- Services Section -->
     <section id="services">
         <div class="container">
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 class="section-subheading text-muted">김동현은 누구인가?</h3>
+                    <h5 class="section-subheading text-muted">김동현은 누구인가?</h5>
+                    <div class="text-center">
                     <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                    </div>
                     <p class="section-subheading text-muted">저는 데이터 사이언티스트를 향한 열정과 끊임없는 노력으로 밝은 미래를 꿈꾸는 청년입니다.<br>
                                                               데이터의 힘에 믿음을 가지고, 복잡한 문제에 도전하며 새로운 통찰을 얻는 것을 즐깁니다.<br>
                                                               데이터를 통해 세상의 패턴을 읽고, 인사이트를 추출하여 실질적인 해결책을 찾는 것이 제 목표입니다.</p>
@@ -32,6 +34,24 @@
                         <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Email: donghyun0626@naver.com</h4>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-external-link-alt fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">
+                        <a href="https://github.com/Donghyun0221" target="_blank">
+                            GitHub
+                        </a>
+                    </h4>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-home fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">주소: 대전광역시 서구</h4>
                 </div>
             </div>
         </div>
