--- a/_includes/services.html
+++ b/_includes/services.html
@@ -6,7 +6,7 @@
                     <h2 class="section-heading">About Me</h2>
                     <h5 class="section-subheading text-muted">김동현은 누구인가?</h5>
                     <div class="text-center">
-                    <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                    <img src="img/about/2.jpg" alt="">
                     </div>
                     <p class="section-subheading text-muted">저는 데이터 사이언티스트를 향한 열정과 끊임없는 노력으로 밝은 미래를 꿈꾸는 청년입니다.<br>
                                                               데이터의 힘에 믿음을 가지고, 복잡한 문제에 도전하며 새로운 통찰을 얻는 것을 즐깁니다.<br>
@@ -38,11 +38,11 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-external-link-alt fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">
+                    <h4 class="service-heading">GitHub: https://github.com/Donghyun0221
                         <a href="https://github.com/Donghyun0221" target="_blank">
-                            GitHub
+                            
                         </a>
                     </h4>
                 </div>
