--- a/_includes/services.html
+++ b/_includes/services.html
@@ -40,9 +40,9 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">GitHub: https://github.com/Donghyun0221
+                    <h4 class="service-heading">
                         <a href="https://github.com/Donghyun0221" target="_blank">
-                            
+                            GitHub: https://github.com/Donghyun0221
                         </a>
                     </h4>
                 </div>
