--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -9,18 +9,22 @@
         <div class="row">
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/dreams-thumbnail.png" class="img-responsive img-centered" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Dreams</h4>
-                    <p class="text-muted">Website Design</p>
-                </div>
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up">
+                    <div class="icon"><i class="icofont-earth"></i></div>
+                    <h4 class="title">Programming Languages</h4>
+                    <p class="description">
+                      JAVA<br>
+                      HTML/CSS/JS<br>
+                      JSP<br>
+                      C<br>
+                      Python<br>
+                      SWIFT<br>
+                      MarkDown<br>
+                      Solidity<br>
+                      R<br>
+                      SQL
+                    </p>
+                  </div>
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
