--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -10,8 +10,8 @@
         
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up">
-                    <div class="icon"><i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-code fa-stack-1x fa-inverse"></i></div>
+                    <div style="text-align: right;"><i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-globe fa-stack-1x fa-inverse"></i></div>
                     <h4 class="title">Programming Languages</h4>
                     <p class="description">
                       JAVA<br>
