--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,15 +11,12 @@
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up">
                     <h4 class="title">Programming Languages</h4>
-                    <p class="description">
+                    <p class="description" style="text-align: center;">
                       JAVA<br>
                       HTML/CSS/JS<br>
                       JSP<br>
-                      C<br>
                       Python<br>
-                      SWIFT<br>
                       MarkDown<br>
-                      Solidity<br>
                       R<br>
                       SQL
                     </p>
@@ -27,80 +24,101 @@
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/escape-thumbnail.png" class="img-responsive img-centered" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Escape</h4>
-                    <p class="text-muted">Website Design</p>
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+                    <h4 class="title">Framework/Library</h4>
+                    <p class="description" style="text-align: center;">
+                        Spring/SpringBoot<br>
+                        node.js<br>
+                        JQuery<br>
+                        BootStrap<br>
+                        FLASK<br>
+                        Pandas<br>
+                        numpy<br>
+                        tensorflow
+                    </p>
                 </div>
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/golden-thumbnail.png" class="img-responsive img-centered" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Golden</h4>
-                    <p class="text-muted">Website Design</p>
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+                    <h4 class="title">Build Tools</h4>
+                    <p class="description" style="text-align: center;">
+                      MAVEN<br>
+                      GRADLE
+                      SVN
+                    </p>
+                  </div>
+            </div>
+        
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+                    <h4 class="title">IDEs &amp; Code Editors</h4>
+                    <p class="description">
+                      Eclipse IDE<br>
+                      Pycharm<br>
+                      VSCode<br>
+                      Spyder<br>
+                      STS (Spring Tools 4 for Visual Studio Code)<br>
+                    </p>
                 </div>
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/treehouse-thumbnail.png" class="img-responsive img-centered" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Treehouse</h4>
-                    <p class="text-muted">Website Design</p>
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon"><i class="icofont-notebook"></i></div>
+                    <h4 class="title">Code/Data Notebooks</h4>
+                    <p class="description" style="text-align: center;">
+                      WJupyter Notebook<br>
+                      GoogleColab
+                    </p>
                 </div>
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/roundicons-thumbnail.png" class="img-responsive img-centered" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Round Icons</h4>
-                    <p class="text-muted">Graphic Design</p>
-                </div>
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon"><i class="icofont-cloudapp"></i></div>
+                    <h4 class="title">Cloud &amp; Services</h4>
+                    <p class="description" style="text-align: center;">
+                      Amazon AWS
+                    </p>
+                  </div>
             </div>
-        
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                            <i class="fa fa-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="img/portfolio/startup-framework-thumbnail.png" class="img-responsive img-centered" alt="">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Startup Framework</h4>
-                    <p class="text-muted">Website Design</p>
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                    <h4 class="title">Server &amp; Virtualization</h4>
+                    <p class="description" style="text-align: center;">
+                      Apache Tomcat<br>
+                    </p>
+                  </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                    <h4 class="title">Version Control</h4>
+                    <p class="description" style="text-align: center;">
+                      Git / Github
+                    </p>
+                  </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon"><i class="icofont-database"></i></div>
+                    <h4 class="title">DataBase</h4>
+                    <p class="description" style="text-align: center;">
+                      Oracle DB<br>
+                      MySQL<br>
+                      SQLite
+                    </p>
                 </div>
             </div>
-        
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon"><i class="icofont-computer"></i></div>
+                    <h4 class="title">Operating Systems(OS)</h4>
+                    <p class="description">
+                      Windows<br>
+                    </p>
+                  </div>
+            </div>
         </div>
     </div>
 </section>
