--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -9,7 +9,7 @@
         <div class="row">
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Programming Languages</h4>
                     <p class="description" style="text-align: center;">
                       JAVA<br>
@@ -24,7 +24,7 @@
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Framework/Library</h4>
                     <p class="description" style="text-align: center;">
                         Spring/SpringBoot<br>
@@ -40,18 +40,17 @@
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Build Tools</h4>
                     <p class="description" style="text-align: center;">
                       MAVEN<br>
-                      GRADLE
                       SVN
                     </p>
                   </div>
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">IDEs &amp; Code Editors</h4>
                     <p class="description">
                       Eclipse IDE<br>
@@ -64,18 +63,18 @@
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <div class="icon"><i class="icofont-notebook"></i></div>
                     <h4 class="title">Code/Data Notebooks</h4>
                     <p class="description" style="text-align: center;">
-                      WJupyter Notebook<br>
+                      Jupyter Notebook<br>
                       GoogleColab
                     </p>
                 </div>
             </div>
         
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <div class="icon"><i class="icofont-cloudapp"></i></div>
                     <h4 class="title">Cloud &amp; Services</h4>
                     <p class="description" style="text-align: center;">
@@ -84,7 +83,7 @@
                   </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Server &amp; Virtualization</h4>
                     <p class="description" style="text-align: center;">
                       Apache Tomcat<br>
@@ -92,7 +91,7 @@
                   </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Version Control</h4>
                     <p class="description" style="text-align: center;">
                       Git / Github
@@ -100,7 +99,7 @@
                   </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <div class="icon"><i class="icofont-database"></i></div>
                     <h4 class="title">DataBase</h4>
                     <p class="description" style="text-align: center;">
@@ -111,7 +110,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <div class="icon"><i class="icofont-computer"></i></div>
                     <h4 class="title">Operating Systems(OS)</h4>
                     <p class="description">
