--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,7 +11,7 @@
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Programming Languages</h4>
-                    <p class="description" style="text-align: center;">
+                    <p class="description">
                       JAVA<br>
                       HTML/CSS/JS<br>
                       JSP<br>
@@ -26,7 +26,7 @@
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Framework/Library</h4>
-                    <p class="description" style="text-align: center;">
+                    <p class="description">
                         Spring/SpringBoot<br>
                         node.js<br>
                         JQuery<br>
@@ -42,7 +42,7 @@
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Build Tools</h4>
-                    <p class="description" style="text-align: center;">
+                    <p class="description">
                       MAVEN<br>
                       SVN
                     </p>
@@ -65,7 +65,7 @@
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Code/Data Notebooks</h4>
-                    <p class="description" style="text-align: center;">
+                    <p class="description">
                       Jupyter Notebook<br>
                       GoogleColab
                     </p>
@@ -75,7 +75,7 @@
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Cloud &amp; Services</h4>
-                    <p class="description" style="text-align: center;">
+                    <p class="description">
                       Amazon AWS
                     </p>
                   </div>
@@ -83,7 +83,7 @@
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Server &amp; Virtualization</h4>
-                    <p class="description" style="text-align: center;">
+                    <p class="description">
                       Apache Tomcat<br>
                     </p>
                   </div>
@@ -91,16 +91,15 @@
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Version Control</h4>
-                    <p class="description" style="text-align: center;">
+                    <p class="description">
                       Git / Github
                     </p>
                   </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
-                    <div class="icon"><i class="icofont-database"></i></div>
                     <h4 class="title">DataBase</h4>
-                    <p class="description" style="text-align: center;">
+                    <p class="description">
                       Oracle DB<br>
                       MySQL<br>
                       SQLite
@@ -109,7 +108,6 @@
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
-                    <div class="icon"><i class="icofont-computer"></i></div>
                     <h4 class="title">Operating Systems(OS)</h4>
                     <p class="description">
                       Windows<br>
