--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -44,6 +44,12 @@
                         numpy<br>
                         tensorflow
                     </p>
+                    <br>
+                    <br>
+                    <br>
+                    <p class="description">
+                        Apache Tomcat
+                    </p>
                 </div>
             </div>
         
@@ -75,14 +81,14 @@
                     <p class="description">
                       Amazon AWS
                     </p>
+
                   </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Server &amp; Virtualization</h4>
-                    <p class="description">
-                      Apache Tomcat<br>
-                    </p>
+
+                    
                   </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
@@ -102,14 +108,6 @@
                       SQLite
                     </p>
                 </div>
-            </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <div class="col-md-4 col-sm-6 portfolio-item mb-4">
-                    <h4 class="title">Operating Systems(OS)</h4>
-                    <p class="description">
-                      Windows<br>
-                    </p>
-                  </div>
             </div>
         </div>
     </div>
