--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -47,8 +47,10 @@
                     <br>
                     <br>
                     <br>
+                    <h4 class="title">Server &amp; Virtualization</h4>
                     <p class="description">
-                        Apache Tomcat
+                      Apache Tomcat<br>
+                      VirtualBox
                     </p>
                 </div>
             </div>
