--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -53,13 +53,11 @@
                     </p>
                     <br>
                     <br>
-                    <br>
                     <h4 class="title">Server &amp; Virtualization</h4>
                     <p class="description">
                       Apache Tomcat<br>
                       VirtualBox
                     </p>
-                    <br>
                     <br>
                     <br>
                     <h4 class="title">DataBase</h4>
@@ -89,7 +87,7 @@
                       Pycharm<br>
                       VSCode<br>
                       Spyder<br>
-                      STS (Spring Tools 4 for Visual Studio Code)<br>
+                      STS 
                     </p>
                 </div>
             </div>
@@ -97,7 +95,8 @@
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
                     <h4 class="title">Cloud &amp; Services</h4>
                     <p class="description">
-                      Amazon AWS
+                      Amazon<br>
+                      AWS
                     </p>
                   </div>
             </div>
