--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">About</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading">Resume</h2>
+                <h3 class="section-subheading text-muted">학력</h3>
             </div>
         </div>
         <div class="row">
@@ -11,29 +11,51 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            <img class="img-circle img-responsive" src="img/about/hoseo.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>2014-2017</h4>
+                                <h4 class="subheading">당진시 호서고등학교 졸업</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">인문계 호서고등학교 문과 졸업</p>
                             </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                            <img class="img-circle img-responsive" src="img/about/pai.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>2017-2022</h4>
+                                <h4 class="subheading">대전광역시 배재대학교 졸업</h4>
+                                <p class="text-muted">호텔항공경영학과, AISW융합전공: 호스피탈리티SW융합 전공</p>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">
+                                    호텔경영학과에서 경영학을 학습한 경험을 바탕으로 느낀 점은 다양한 측면에서 조직을 효과적으로 이끌고 관리하는 능력이 중요하다는 것입니다. 호텔 업계에서는 고객 서비스, 운영 효율성, 재무 관리 등 다양한 영역에서 경영 원리와 전략이 핵심적입니다. 특히, 고객 만족과 팀 협력이 호텔 산업에서 성공을 결정짓는 중요한 요소 중 하나라는 것을 깨닫게 되었습니다.<br>
+                                    AISW(인공지능 및 소프트웨어) 융합 전공에서는 호스피탈리티SW융합 전공을 통해 호텔 및 관광 산업에서 활용되는 데이터를 분석하고, 그 결과를 토대로 니즈를 충족시키는 방향성을 찾을 수 있습니다.
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">Resume</h2>
+                        <h3 class="section-subheading text-muted">학력 자격증 대외활동 정보</h3>
+                    </div>
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/pai.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>2023.02-2023.07</h4>
+                                <h4 class="subheading">배재대학교 석사 중퇴</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">배재대학교 석사 중퇴</p>
                             </div>
                         </div>
                     </li>
@@ -50,6 +72,12 @@
         <br>
         <br>
         <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Resume</h2>
+                <h3 class="section-subheading text-muted">대외활동</h3>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-12">
                 <ul class="timeline">
                     <li>
@@ -58,29 +86,43 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>2023.07.12-2023.12.26</h4>
+                                <h4 class="subheading">(계룡건설)빅데이터 기반 GREEN TECH SW개발자 과정</h4>
+                                <h4 class="subheading">풀스텍 개발 과정 수강</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">커리큘럼</p><br><br>
+                                <p class="text-muted">탄소중립의 이해 및 필요성<br>
+                                자바의 기초에 대해 학습<br>
+                                기업 및 조직에 필요한 인사이트 도출 및 허용<br>
+                                공공데이터를 활용한 에너지 데이터 비교분석 플랫폼 개발<br>
+                                에코건설을 위한 에너지 분석 SW개발<br>
+                                건물에너지 관리시스템 개발
+                            </p>
                             </div>
                         </div>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Resume</h2>
+                <h3 class="section-subheading text-muted">자격증</h3>
+            </div>
+            <div class="timeline-panel">
+                <div class="timeline-heading">
+                    <h4>2022.09.23</h4>
+                    <h4 class="subheading">ADSP 취득</h4>
+                </div>
+                <div class="timeline-heading">
+                    <h4>2022.10.13</h4>
+                    <h4 class="subheading">빅데이터분석기사 필기 합격</h4>
+                </div>
             </div>
         </div>
     </div>
