--- a/_includes/about.html
+++ b/_includes/about.html
@@ -31,17 +31,17 @@
                             <div class="timeline-heading">
                                 <h4>2017-2022</h4>
                                 <h4 class="subheading">대전광역시 배재대학교 졸업</h4>
-                                <p class="text-muted">호텔항공경영학과, AISW융합전공: 호스피탈리티SW융합 전공</p>
-                            </div>
-                            <div class="timeline-heading">
-                                <h4>2023.02-2023.07</h4>
-                                <h4 class="subheading">배재대학교 석사 중퇴</h4>
+                                <p class="text-muted">호텔항공경영학과, 호스피탈리티SW융합 전공</p>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">
                                     호텔경영학과에서 경영학을 학습한 경험으로 다양한 측면에서 조직을 효과적으로 이끌고 관리하는 능력이 중요하다는 것입니다.<br>특히, 고객 만족과 팀 협력이 호텔 산업에서 성공을 결정짓는 중요한 요소 중 하나라는 것을 깨닫게 되었습니다.<br>
                                     AISW(인공지능 및 소프트웨어) 융합 전공에서는 호스피탈리티SW융합 전공을 통해 <br>호텔 및 관광 산업에서 활용되는 데이터를 분석하고, 그 결과를 토대로 니즈를 충족시키는 방향성을 찾을 수 있습니다.
                                 </p>
+                            </div>
+                            <div class="timeline-heading">
+                                <h4>2023.02-2023.07</h4>
+                                <h4 class="subheading">배재대학교 석사 중퇴</h4>
                             </div>
                         </div>
                     </li>
