--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -49,7 +49,8 @@
                         FLASK<br>
                         Pandas<br>
                         numpy<br>
-                        tensorflow
+                        tensorflow<br>
+                        sklearn
                     </p>
                     <br>
                     <br>
