--- a/_includes/about.html
+++ b/_includes/about.html
@@ -35,8 +35,8 @@
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">
-                                    호텔경영학과에서 경영학을 학습한 경험으로 다양한 측면에서 조직을 효과적으로 이끌고 관리하는 능력이 중요하다는 것입니다.<br>특히, 고객 만족과 팀 협력이 호텔 산업에서 성공을 결정짓는 중요한 요소 중 하나라는 것을 깨닫게 되었습니다.<br>
-                                    AISW(인공지능 및 소프트웨어) 융합 전공에서는 호스피탈리티SW융합 전공을 통해 <br>호텔 및 관광 산업에서 활용되는 데이터를 분석하고, 그 결과를 토대로 니즈를 충족시키는 방향성을 찾을 수 있습니다.
+                                    호텔경영학과에서 경영학을 학습한 경험으로 다양한 측면에서 조직을 효과적으로 이끌고 관리하는 능력이 중요하다는 것입니다.<br><br>특히, 고객 만족과 팀 협력이 호텔 산업에서 성공을 결정짓는 중요한 요소 중 하나라는 것을 깨닫게 되었습니다.<br>
+                                    AISW(인공지능 및 소프트웨어) 융합 전공에서는 호스피탈리티SW융합 전공을 통해 호텔 및 관광 산업에서 활용되는 데이터를 분석하고<br><br> 그 결과를 토대로 니즈를 충족시키는 방향성을 찾을 수 있습니다.
                                 </p>
                             </div>
                             <div class="timeline-heading">
@@ -76,7 +76,7 @@
                                 <p class="text-muted">탄소중립의 이해 및 필요성<br>
                                 자바의 기초에 대해 학습<br>
                                 기업 및 조직에 필요한 인사이트 도출 및 허용<br>
-                                공공데이터를 활용한 에너지 데이터 비교분석 플랫폼 개발<br>
+                                공공데이터를 활용한 에너지 데이터 분석 플랫폼 개발<br>
                                 에코건설을 위한 에너지 분석 SW개발<br>
                                 건물에너지 관리시스템 개발
                             </p>
