--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -82,7 +82,7 @@
         
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="col-md-4 col-sm-6 portfolio-item mb-4">
-                    <h4 class="title">IDEs &amp; Code Editors</h4>
+                    <h4 class="title">IDEs <br>&amp;<br> Code Editors</h4>
                     <p class="description">
                       Eclipse IDE<br>
                       Pycharm<br>
