--- a/_includes/about.html
+++ b/_includes/about.html
@@ -71,7 +71,7 @@
                             </div>
                             <br>
                             <br>
-                            <div class="text-center">
+                            <div class="timeline-body">
                                 <h4 class="subheading">커리큘럼</h4><br>
                                 <p class="text-muted">탄소중립의 이해 및 필요성<br>
                                 자바의 기초에 대해 학습<br>
@@ -98,7 +98,7 @@
             <div class="col-lg-12">
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image">
+                        <div class="text-center">
                             <img class="img-circle img-responsive" src="img/about/ja.png" alt="">
                         </div>
                         <div class="timeline-panel">
