--- a/_includes/about.html
+++ b/_includes/about.html
@@ -60,8 +60,8 @@
             <div class="col-lg-12">
                 <ul class="timeline">
                     <li>
-                        <div class="text-center">
-                            <img class="img-circle img-responsive" src="img/about/gae.jpg" alt="">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/gae.jpg" alt="" width="100">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -98,8 +98,8 @@
             <div class="col-lg-12">
                 <ul class="timeline">
                     <li>
-                        <div class="text-center">
-                            <img class="img-circle img-responsive" src="img/about/ja.png" alt="">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/about/ja.png" alt="" width="100">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
