--- a/_includes/about.html
+++ b/_includes/about.html
@@ -61,7 +61,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/gae.jpg" alt="" width="100">
+                            <img class="img-circle img-responsive" src="img/about/124.png" alt="" width="100">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -104,7 +104,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2022.09.23</h4>
-                                <p class="text-muted">APSP 취득<br><br>
+                                <p class="text-muted">APsP 취득<br><br>
                                 <h4>2023.10.13</h4>
                                 <p class="text-muted">빅데이터분석기사 필기합격<br>
                             </div>
