--- a/_includes/team.html
+++ b/_includes/team.html
@@ -25,7 +25,7 @@
                 <p><strong>수상내역 :</strong>우수상 수상</p>
             </div>
             <div class="col-sm-4">
-                    <h3>관광분야 산업연관분석 프로젝트</h3>
+                    <h3>관광산업연관분석 프로젝트</h3>
                     <hr>
                     <p class="text-muted">연구실 프로젝트 - 관광분야 산업연관분석</p>
                     <hr>
