--- a/_includes/about.html
+++ b/_includes/about.html
@@ -61,7 +61,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/124.png" alt="">
+                            <img class="img-circle img-responsive" src="img/about/gae.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
