--- a/_includes/team.html
+++ b/_includes/team.html
@@ -18,7 +18,9 @@
                     <p><strong>프로젝트 기술: </strong>Text Mining</p>
                     </div>
                     <hr>
+                    <div style="width: 500px; height: 150px;">
                     <p><strong>[프로젝트 설명]</strong><br>당시 핫한 이슈였던 '메타버스'키워드에 대한 인터넷, 스마트폰 이용자의 인식을 조사하기 위한 공모전입니다.</p>
+                    </div>
                     <br>
                     <p><strong>구체적인 설명</strong><br>'메타버스' 키워드와 관련된 텍스트 데이터를 수집하고 분석하여 트렌드, 감성 등을 이해하고 시각화하는 과정을 발표하는 학내 공모전입니다.</p>
                     <br>텍스트 데이터를 수집하여 데이터 전처리를 진행하고 토큰화 작업을 통해 분석 가능한 환경으로 만들고,
