--- a/_includes/team.html
+++ b/_includes/team.html
@@ -47,7 +47,7 @@
                     <p><strong>사용 언어 :</strong> R</p>
                     </div>
                     <div style="height: 100px;">
-                    <a href="hhttps://github.com/Donghyun0221/input-output-in-Daejeon" target="_blank" style="color: black;">
+                    <a href="https://github.com/Donghyun0221/input-output-in-Daejeon" target="_blank" style="color: black;">
                         Github 주소
                      </a>
                     </div>
