--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -48,9 +48,9 @@
                         BootStrap<br>
                         FLASK<br>
                         Pandas<br>
-                        numpy<br>
-                        tensorflow<br>
-                        sklearn
+                        Numpy<br>
+                        Tensorflow<br>
+                        Sklearn
                     </p>
                     <br>
                     <br>
