--- a/_includes/team.html
+++ b/_includes/team.html
@@ -17,6 +17,11 @@
                     <p><strong>프로젝트 도구 :</strong>Textom(텍스트 마이닝 크롤링, 분석)</p>
                     <p><strong>프로젝트 기술: </strong>Text Mining</p>
                     </div>
+                    <div style="height: 100px;">
+                    <a href="https://github.com/Donghyun0221" target="_blank" style="color: black;">
+                           Github 주소
+                    </a>
+                    </div>
                     <hr>
                     <div style="height: 100px;">
                     <p><strong>[프로젝트 설명]</strong>
@@ -41,6 +46,11 @@
                     <p><strong>프로젝트 도구 :</strong>Rstudio, Excel</p>
                     <p><strong>사용 언어 :</strong> R</p>
                     </div>
+                    <div style="height: 100px;">
+                    <a href="https://github.com/Donghyun0221/input-output-in-Daejeon" target="_blank" style="color: black;">
+                        Github 주소
+                     </a>
+                    </div>
                     <hr>
                     <div style="height: 100px;">
                     <p><strong>[프로젝트 설명]</strong>
@@ -54,7 +64,7 @@
                     </p>   
             </div>
             <div class="col-sm-4">
-                    <h3>미래융합 교육원 프로젝트</h3>
+                    <h3>미래융합 교육원 개인 프로젝트</h3>
                     <hr>
                     <p class="text-muted">개인 프로젝트 - 나만의 주식차트 구현하기</p>
                     <hr>
@@ -63,6 +73,11 @@
                     <p><strong>프로젝트 도구 :</strong>Eclipse, Spring-tool-suite, OracleDB, Python, GitHub
                     <P><strong>사용 기술 :</strong>Spring, MVC모델, JQuery, Bootstrap</P>
                     <p><strong>사용 언어 :</strong>JAVA, JSP, HTML/CSS/JS, SQL, Python</p>
+                    </div>
+                    <div style="height: 100px;">
+                    <a href="https://github.com/Donghyun0221/SpringProject" target="_blank" style="color: black;">
+                        Github 주소
+                     </a>
                     </div>
                     <hr>
                     <div style="height: 100px;">
@@ -75,7 +90,36 @@
                     <br>차트와 데이터의 현황, 거래량을 보여주는 프로젝트를 진행했습니다.
                     <br>AJAX방식을 통해 데이터를 불러온 후 CHART.JS를 활용하여 시각화하는 작업과 주식 데이터를 엑셀파일로 저장하는 기능, 관련 뉴스 출력기능을 구현했습니다.
                     </p>
-            </div>  
+            </div>
+            <div class="col-sm-4">
+                <h3>미래융합 교육원 팀 프로젝트</h3>
+                <hr>
+                <p class="text-muted">팀 프로젝트 - 대전시 건물데이터 기반 탄소배출량 예측 및 감축 방안 시스템 구축</p>
+                <hr>
+                <div style="height: 300px;">
+                <p><strong>프로젝트 기간 :</strong>2023-10-30 ~ 2023-12-26</p>
+                <p><strong>프로젝트 도구 :</strong>Eclipse, Spring-tool-suite, OracleDB, Python, GitHub, Flask
+                <P><strong>사용 기술 :</strong>Spring, MVC모델, JQuery, Bootstrap</P>
+                <p><strong>사용 언어 :</strong>JAVA, JSP, HTML/CSS/JS, SQL, Python</p>
+                </div>
+                <div style="height: 100px;">
+                <a href="https://github.com/Donghyun0221/SpringProject" target="_blank" style="color: black;">
+                    Github 주소
+                 </a>
+                </div>
+                <hr>
+                <div style="height: 100px;">
+                <p><strong>[프로젝트 설명]</strong>
+                <br>대전광역시 주소 데이터 기반 에너지 사용량 제공과 예측하여 공공부문 탄소 중립을 위한 에너지 사용 및 탄소배출량의 지속적인 모니터링을 구현하는 웹 페이지 입니다. </p>
+                </div>
+                <hr>
+                <p><strong>구체적인 설명</strong>
+                <br>카카오 지도를 연동하여 행정구역, 건물별 에너지 사용량 및 탄소배출량 조회 및 탄소흡수량 조회할 수 있도록 기능을 구현했습니다.
+                <br>건물 용도별 탄소배출량 예측 시스템 및 유사건물 에너지 사용량 비교 및 추천기능을 구현했습니다.
+                <br>데이터 기반 구체적인 감량목표 및 실천방안을 수립 했습니다.
+                <br>행정구역별 탄소 배출 감량방안 활용 도시계획 의사결정에 이바지합니다.
+                </p>
+        </div>    
         </div>
     </div>
 </section>
