--- a/_includes/team.html
+++ b/_includes/team.html
@@ -115,7 +115,7 @@
                 <hr>
                 <div style="height: 100px;">
                 <p><strong>[프로젝트 설명]</strong>
-                <br>대전광역시 주소 데이터 기반 에너지 사용량 제공과 예측하여 공공부문 탄소 중립을 위한 에너지 사용 및 탄소배출량의 지속적인 모니터링을 구현하는 웹 페이지 입니다. </p>
+                <br>대전광역시 주소 데이터 기반 에너지 사용량 제공과 예측을 통한 공공부문 탄소 중립을 위한 에너지 사용 및 탄소배출량의 지속적인 모니터링을 구현하는 웹 페이지 구현 </p>
                 </div>
                 <hr>
                 <p><strong>구체적인 설명</strong>
