--- a/_includes/team.html
+++ b/_includes/team.html
@@ -123,6 +123,7 @@
                 <br>데이터 기반 구체적인 감량목표 및 실천방안을 수립 했습니다.
                 <br>행정구역별 탄소 배출 감량방안 활용 도시계획 의사결정에 이바지합니다.
                 </p>
+                <p><strong>수상내역 :</strong>우수상 수상</p>
             </div>
         </div>
     </div>
