--- a/_includes/about.html
+++ b/_includes/about.html
@@ -39,15 +39,18 @@
                                     AISW(인공지능 및 소프트웨어) 융합 전공에서는 호스피탈리티SW융합 전공을 통해 호텔 및 관광 산업에서 활용되는 데이터를 분석하고<br><br> 그 결과를 토대로 니즈를 충족시키는 방향성을 찾을 수 있습니다.
                                 </p>
                             </div>
+                            <br>
                             <div class="timeline-heading">
                                 <h4>2021-2023</h4>
                                 <h4 class="subheading">대전광역시 배재대학교 연구실 활동 수행</h4>
                             </div>
+                            <br>
                             <div class="timeline-body">
                                 <p class="text-muted">
-                                    데이터 분석 프로젝트(산업연관분석 프로젝트)<br><br> 호텔관광 관련 프로젝트(미래형 관광인재양성사업 추진전략 및 발전방향 연구 등) 다수 수행
+                                    데이터 분석 프로젝트(산업연관분석 프로젝트)<br>호텔관광 관련 프로젝트(미래형 관광인재양성사업 추진전략 및 발전방향 연구 등) 다수 수행
                                 </p>
                             </div>
+                            <br>
                             <div class="timeline-heading">
                                 <h4>2023.02-2023.07</h4>
                                 <h4 class="subheading">배재대학교 석사 중퇴</h4>
